# Spell

spell-demo/ui/: app-window.slint
spell-framework/: Cargo.toml
spell-framework/src/: configure.rs  event_macros.rs  lib.rs  skia_non_docs.rs  wayland_adapter.rs
spell-framework/src/vault/: notification_manager.rs
spell-framework/src/wayland_adapter/widget_impls/: mod.rs  popup_impl.rs  win_impl.rs
