[package]
name = "spell-framework"
version = "1.0.5"
edition = "2024"
description = "Make desktop widgets by the Mystic Arts of Spell"
license = "GPL-3.0-or-later"
repository = "https://github.com/VimYoung/Spell"
keywords = ["widget", "rice", "spell", "slint", "wayland"]
exclude = ["/src/bin/*"]
homepage = "https://vimyoung.github.io/Spell/"

[dependencies]
# env_logger = "0.11.7"
event-listener = "5.4.0"
# fs2 = "0.4.3"
futures-util = "0.3.31"
i-slint-core = { version = "1.15.1", default-features = false }
# i-slint-renderer-skia = { version = "1.15.1", features = [
#   "wayland",
# ], optional = true }
i-slint-renderer-skia = { version = "1.15.1", default-features = false, optional = true }
rust-fuzzy-search = "0.1.1"
# signal-hook = "0.4.3"
slint = { version = "1.15.1", default-features = false, features = [
  "renderer-skia",
  "compat-1-2",
] }
smithay-client-toolkit = { version = "0.20.0",
    # path = "../../client-toolkit/",
    default-features = false, features = [
  "xkbcommon",
] }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "sync"] }
tracing = { version = "0.1.44", features = ["max_level_trace"] }
tracing-subscriber = { version = "0.3.19", features = ["std", "env-filter"] }
# tracing-rfc-5424 = "0.2.0"
# zbus = {version = "5.10.0", default-features=false, features=["blocking-api"]}
zbus = "5.10.0"
nonstick = "0.1.1"
tracing-appender = "0.2.3"
paste = "1.0.15"
mpris = "2.0.1"
smithay-clipboard = "0.7.3"

[package.metadata.docs.rs]
no-default-features = true
features = ["docs-only"]

[features]
default = ["i-slint-renderer-skia", "slint"]
docs-only = []
slint = ["i-slint-renderer-skia"]
